--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -20,19 +20,25 @@
         android:textSize="28sp"
         android:textStyle="bold|italic"
         android:typeface="sans"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toTopOf="@id/textView_second"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.176" />
 
     <TextView
         android:id="@+id/textView_second"
-        style="@android:style/Widget.Holo.TextView"
-        android:layout_width="374dp"
-        android:layout_height="80dp"
+        android:layout_width="312dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         android:fadingEdge="horizontal|vertical"
         android:fontFamily="serif"
         android:lineSpacingExtra="10sp"
+        android:layout_gravity="center"
         android:shadowColor="#000000"
         android:shadowDx="20"
         android:shadowDy="20"
@@ -44,9 +50,8 @@
         android:textColor="@android:color/secondary_text_light"
         android:textSize="15sp"
         android:typeface="normal"
-        app:layout_constraintBottom_toTopOf="@id/button_first"
+        app:layout_constraintBottom_toTopOf="@id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -56,10 +61,10 @@
         android:text="@string/about"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintHorizontal_bias="0.16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView_second"
-        />
+        app:layout_constraintVertical_bias="0.394" />
 
     <Button
         android:id="@+id/button_second"
@@ -68,10 +73,11 @@
         android:text="@string/contact"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.939"
+        app:layout_constraintHorizontal_bias="0.839"
         app:layout_constraintRight_toLeftOf="@id/button_first"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView_second" />
+        app:layout_constraintTop_toBottomOf="@id/textView_second"
+        app:layout_constraintVertical_bias="0.394" />
 
     <TextView
         android:id="@+id/textView_third"
@@ -90,25 +96,29 @@
         android:id="@+id/button_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="152dp"
-        android:layout_marginRight="152dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginRight="160dp"
         android:text="@string/more"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_second"
-        app:layout_constraintVertical_bias="0.431" />
+        app:layout_constraintVertical_bias="0.124" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="144dp"
+        android:layout_height="143dp"
         android:layout_marginTop="23dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginRight="140dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginRight="144dp"
         android:layout_marginBottom="73dp"
+        android:contentDescription="@string/about"
         app:layout_constraintBottom_toBottomOf="@+id/button_second"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_second"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.333"
+        app:srcCompat="@drawable/code"
+        android:layout_gravity="center"
         tools:src="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
