--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryTwo">#FF045B</color>
     <color name="colorPrimaryDark">#FFE4E6</color>
     <color name="colorAccent">#5BBAB5</color>
-    <color name="screenBackground">#FFE4E6</color>
+    <color name="screenBackground">#FFF5F9</color>
 </resources>
